--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,8 @@
       content="Web site created using create-react-app"
     />
    
-    <title>React App</title>
+    <title>Questions pour un dev</title>
+    <link rel="icon" type="image/png" sizes="64x64" href="./favicon.png">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
