rename in Favicon.png

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
     />
    
     <title>Questions pour un dev</title>
-    <link rel="icon" type="image/png" sizes="64x64" href="./favicon.png">
+    <link rel="icon" type="image/png" sizes="64x64" href="./Favicon.png">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
